# Cargo.toml

[package]
name = "tcp-mitm"
version = "1.0.1"
authors = ["Sami J. Mäkinen <sjm@iki.fi>"]
description = "Generic TCP man-in-the-middle proxy with a tap"
repository = "https://github.com/sjm42/tcp-mitm"
readme = "README.md"
keywords = ["tcp", "proxy", "tap"]
license = "MIT"
edition = "2021"
resolver = "2"


[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures = "0"
panic-abort = "0"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0", features = ["net"] }
tracing = { version = "0", features = ["log"] }
tracing-subscriber = "0"


[build-dependencies]
build-data = "0"


[profile.release]
lto = "fat"
opt-level = 3


[profile.minsize]
inherits = "release"
codegen-units = 1
strip = true
opt-level = "z"

# EOF
